--- a/routine-app/src/pages/CreateTable/CreateTable.css
+++ b/routine-app/src/pages/CreateTable/CreateTable.css
@@ -19,3 +19,26 @@ button {
     padding: 10px 20px; /* Adjust padding for internal spacing */
     font-size: 16px;
 }
+
+.warning {
+    background-color: #ffcccc;
+    padding: 2px;
+    border: 1px solid #ff0000;
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+    width: 50%;
+  }
+  
+.warningText{
+    color: red
+}
+
+.warning-button{
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    font-size: 18px;
+    padding: 0;
+    margin-right: 200px;
+}
