added coloring logic

--- a/routine-app/src/pages/SchedulePage/SchedulePage.css
+++ b/routine-app/src/pages/SchedulePage/SchedulePage.css
@@ -1,4 +1,13 @@
 .tableRowStyle:hover {
     background: darkgray;
-    cursor: pointer
-  };
+    cursor: pointer;
+  }
+
+  .tableRowStyle.prevStateStyle {
+  background: red;
+}
+
+
+  .normalStateStyle{
+    background-color: white;
+  }
