--- a/routine-app/src/components/Timer/Timer.css
+++ b/routine-app/src/components/Timer/Timer.css
@@ -1,5 +1,55 @@
-.optionButtonStyles{
-    font-size: "18px";
-    cursor: "pointer";
-    margin: "10px"; 
-}
+/* Timer.css */
+
+.timer-container {
+    text-align: center;
+    margin-top: -50px;
+    margin-left: 35%;
+    margin-bottom: 40px;
+    padding: 10px;
+    background-color: #f0f0f0;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column; /* Change to column direction */
+    justify-content: center;
+    align-items: center;
+    width: 25%;
+  }
+  
+  .header-container {
+    flex-grow: 1;
+  }
+  
+  .timer-text {
+    font-size: 38px;
+    color: #333;
+  }
+  
+  .options-container {
+    display: flex;
+    margin-left: 400px;
+    height: 30px;
+    width: 0px;
+  }
+  
+  .options-container,
+  .play-pause-container {
+    margin-top: 10px; /* Add margin-top to separate the sections */
+  }
+  
+  .options-button {
+    font-size: 20px; /* Adjust the font size to make the three-dotted button smaller */
+    cursor: pointer;
+  }
+  
+  .play-pause-button {
+    font-size: 24px;
+    cursor: pointer;
+  }
+  
+  .time-container {
+    display: flex;
+    flex-direction: row;
+    margin-left: 30px;
+  }
+  
