--- a/routine-app/src/components/TimerOptions/TimerOptions.css
+++ b/routine-app/src/components/TimerOptions/TimerOptions.css
@@ -1,26 +1,47 @@
-/* OptionsView.css */
+/* TimerOptions.css */
 
 .options-view {
-    position: fixed;
-    background-color: white;
-    border: 1px solid #ccc;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    z-index: 1000;
-  }
-  
-  ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-  }
-  
-  li {
-    padding: 10px;
-    cursor: pointer;
-    border-bottom: 1px solid #eee;
-  }
-  
-  li:hover {
-    background-color: #f5f5f5;
-  }
-  
+  position: relative;
+}
+
+.options-view ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.options-view li {
+  padding: 10px;
+  cursor: pointer;
+  border-bottom: 1px solid #eee;
+  position: relative;
+}
+
+.options-view .main-dropdown {
+  background-color: white; /* Set the background color you want */
+}
+
+.options-view .dropdown-options {
+  position: absolute;
+  left: 100%;
+  top: 0;
+  display: none;
+  z-index: 1000;
+  min-width: 150px; /* Adjust the width as needed */
+  background-color: white; /* Set the background color you want */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.options-view .main-dropdown:hover .dropdown-options {
+  display: block;
+}
+
+/* Additional class for elements needing a solid white background */
+.options-view .solid-white-background {
+  background-color: white; /* Set the background color you want */
+  transition: background-color 0.3s ease; /* Add a transition effect */
+}
+
+.options-view .solid-white-background:hover {
+  background-color: #f5f5f5; /* Set the background color on hover */
+}
